src/main/java/com/illuminarean/example/error/AlreadyExistsException.java
package com.illuminarean.example.error;

public class AlreadyExistsException extends RuntimeException {
    public AlreadyExistsException(String message) {
        super(message);
    }
}
